# mcp-cmf-tools

./: .env.example  .gitignore  Dockerfile  ERRORES.md  INSTRUCCIONES_CLAUDE_CODE.md  README.md  STATUS.md  instrucciones.md  mcp_server.py  pyproject.toml  server.py
chat/: claude_bridge.py  endpoint.py
data/: alertas_fraude.json  context.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ChatWindow.jsx  Message.jsx  ToolBadge.jsx  Welcome.jsx
mcp_tools/: bcn.py  cmf.py  mindicador.py
scripts/: prepare_alerts.py  test_tools.py
