[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_tools*", "chat*"]

[project]
name = "regulbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.40",
    "mcp[cli]>=1.27",
    "httpx>=0.27",
    "cachetools>=5.5",
    "pydantic>=2.0",
]
