[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_tools*"]

[project]
name = "regulbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27",
    "httpx>=0.27",
    "cachetools>=5.5",
]
